--- a/laravel/resources/assets/css/demo.css
+++ b/laravel/resources/assets/css/demo.css
@@ -46,36 +46,39 @@
 * Content
 ******************************************************************************/
 
-.demo-blocks > * {
+.demo-blocks>* {
   display: block !important;
 }
 
-.demo-inline-spacing > * {
+.demo-inline-spacing>* {
   margin: 1rem 0.375rem 0 0 !important;
 }
 
 /* ? .demo-vertical-spacing class is used to have vertical margins between elements. To remove margin-top from the first-child, use .demo-only-element class with .demo-vertical-spacing class. For example, we have used this class in forms-input-groups.html file. */
-.demo-vertical-spacing > * {
+.demo-vertical-spacing>* {
   margin-top: 1rem !important;
   margin-bottom: 0 !important;
 }
-.demo-vertical-spacing.demo-only-element > :first-child {
+
+.demo-vertical-spacing.demo-only-element> :first-child {
   margin-top: 0 !important;
 }
 
-.demo-vertical-spacing-lg > * {
+.demo-vertical-spacing-lg>* {
   margin-top: 1.875rem !important;
   margin-bottom: 0 !important;
 }
-.demo-vertical-spacing-lg.demo-only-element > :first-child {
+
+.demo-vertical-spacing-lg.demo-only-element> :first-child {
   margin-top: 0 !important;
 }
 
-.demo-vertical-spacing-xl > * {
+.demo-vertical-spacing-xl>* {
   margin-top: 5rem !important;
   margin-bottom: 0 !important;
 }
-.demo-vertical-spacing-xl.demo-only-element > :first-child {
+
+.demo-vertical-spacing-xl.demo-only-element> :first-child {
   margin-top: 0 !important;
 }
 
@@ -102,10 +105,330 @@
   flex-direction: column;
   margin-top: 1rem;
 }
+
 .layout-demo-placeholder img {
   width: 900px;
 }
+
 .layout-demo-info {
   text-align: center;
   margin-top: 1rem;
 }
+
+body {
+  font-family: 'Nunito', sans-serif;
+  margin: 0;
+  padding: 0;
+  color: #fff;
+  background-color: transparent;
+}
+
+.header {
+  background-color: transparent;
+  padding: 0.9rem;
+  text-align: center;
+  color: dodgerblue;
+  font-size: 22px;
+  font-weight: bold;
+  border-radius: 10px;
+}
+
+section {
+  padding: 2rem;
+}
+
+.movie {
+  margin: 0.5rem;
+  transition: transform 0.3s;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.movie:hover {
+  transform: scale(1.05);
+}
+
+.movie img {
+  width: 37vh;
+  height: 25vh;
+  border-radius: 8px;
+}
+
+.container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-column-gap: 1px;
+  grid-row-gap: 7vh;
+  background-color: transparent;
+  overflow: visible;
+}
+
+.table {
+  margin: 0;
+  height: 100%;
+  width: 100%;
+}
+
+.botonbuscar {
+  display: block;
+  width: 100%;
+  padding: 0.469rem 0.735rem;
+  font-size: 0.9375rem;
+  font-weight: 400;
+  line-height: 1.4;
+  color: #a1b0cb;
+  background-color: transparent;
+  background-clip: padding-box;
+  border: 1px solid #546990;
+  -webkit-appearance: none;
+  width: 150vh;
+  -moz-appearance: none;
+  appearance: none;
+  border-radius: 0.25rem;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+/* MOVIE SHOW*/
+/* MOVIE SHOW*/
+/* MOVIE SHOW*/
+/* MOVIE SHOW*/
+/* MOVIE SHOW*/
+
+.showcontainer {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.card {
+  background-color: #333;
+  border-radius: 8px;
+  padding: 20px;
+  margin-bottom: 20px;
+}
+
+.showvideo {
+  width: 100%;
+  border-radius: 8px;
+}
+
+.esynopsis .card {
+  background-color: #333;
+  border-radius: 8px;
+  padding: 20px;
+}
+
+.tableshowsynopsis {
+  width: 100%;
+}
+
+.synopsis {
+  margin-top: 2vh;
+  font-size: 16px;
+  line-height: 1.6;
+
+}
+
+.showtexto .container {
+  text-align: center;
+}
+
+.btn {
+  margin-right: 10px;
+  margin-bottom: 10px;
+}
+
+.btn-warning {
+  background-color: #e50914;
+  border-color: #e50914;
+}
+
+.btn-danger {
+  background-color: #e50914;
+  border-color: #e50914;
+}
+
+.modal-content {
+  background-color: #333;
+  color: #fff;
+}
+
+.modal-header,
+.modal-footer {
+  border-color: #444;
+}
+
+.btn-secondary {
+  background-color: #888;
+  border-color: #888;
+}
+
+.btn-primary {
+  background-color: #e50914;
+  border-color: #e50914;
+}
+
+.btn-close {
+  color: #fff;
+}
+
+.titlemovie {
+  font-size: 36px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+
+
+/* MOVIE SHOW*/
+/* MOVIE SHOW*/
+/* MOVIE SHOW*/
+/* MOVIE SHOW*/
+/* MOVIE SHOW*/
+
+/* ------------------*/
+
+/* MOVIE EDIT*/
+/* MOVIE EDIT*/
+/* MOVIE EDIT*/
+/* MOVIE EDIT*/
+/* MOVIE EDIT*/
+
+
+.containeredit {
+  margin-top: 30px;
+  overflow: hidden;
+}
+
+.card {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 12px;
+  overflow: hidden;
+}
+
+.img-posts-show {
+  width: 100%;
+  height: auto;
+  border-radius: 12px;
+}
+
+.showvideo {
+  width: 100%;
+  height: auto;
+  border-radius: 12px;
+}
+
+.col-md-8 {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.form-group {
+  margin-bottom: 20px;
+}
+
+textarea {
+  min-height: 100px;
+  /* Altura mínima para el área de texto */
+}
+
+
+.btn-primary,
+.btn-secondary {
+  padding: 10px 20px;
+  font-size: 18px;
+  border-radius: 8px;
+}
+
+.btn-primary {
+  background-color: #007bff;
+  /* Color azul */
+  border-color: #007bff;
+  color: #fff;
+}
+
+.btn-secondary {
+  background-color: #6c757d;
+  /* Color gris */
+  border-color: #6c757d;
+  color: #fff;
+}
+
+.espacioedit {
+  margin-bottom: 3vh;
+}
+
+/* MOVIE EDIT*/
+/* MOVIE EDIT*/
+/* MOVIE EDIT*/
+/* MOVIE EDIT*/
+
+/* ------------------*/
+
+/* MOVIE CREATE*/
+/* MOVIE CREATE*/
+/* MOVIE CREATE*/
+/* MOVIE CREATE*/
+/* MOVIE CREATE*/
+
+
+.containercreate {
+  margin-top: 30px;
+}
+
+.card {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  /* Sutil sombra para las tarjetas */
+  border-radius: 12px;
+}
+
+.border {
+  border: 1px solid #dee2e6;
+  /* Borde más claro */
+  border-radius: 12px;
+  padding: 20px;
+}
+
+.posts {
+  background-color: transparent;
+  /* Fondo blanco para resaltar */
+}
+
+.form-group {
+  margin-bottom: 20px;
+}
+
+textarea {
+  min-height: 100px;
+  /* Altura mínima para el área de texto */
+}
+
+
+
+.btn-primary,
+.btn-secondary {
+  padding: 10px 20px;
+  font-size: 18px;
+  border-radius: 8px;
+}
+
+.btn-primary {
+  background-color: #007bff;
+  /* Color azul */
+  border-color: #007bff;
+  color: #fff;
+}
+
+.btn-secondary {
+  background-color: #6c757d;
+  /* Color gris */
+  border-color: #6c757d;
+  color: #fff;
+}
+
+
+/* MOVIE CREATE*/
+/* MOVIE CREATE*/
+/* MOVIE CREATE*/
+/* MOVIE CREATE*/
+/* MOVIE CREATE*/
+
+/* ------------------*/
